# ricode-ml

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
ricode/: __init__.py
ricode/datasets/: text.py  utils.py
ricode/datasets/downloads/named_entity_recognition/: ontonotes5.py
ricode/datasets/downloads/relation_extraction/: ade.py  conll2004.py  scierc.py
ricode/distributed/: __init__.py  run_launcher.py
ricode/gradiento/: args.py  gradiento.py
ricode/ml/: __init__.py  dataloaders.py  experiments.py  metrics.py  training.py  training_basics.py  training_config.py  training_dataset_mixins.py  training_datasets.py  training_defaults.py  training_fsdp.py  training_operators.py  training_types.py  training_utils.py
ricode/ml/_attrs_based/: dataset.py  multiprocessing.py
ricode/ml/_metrics/: __init__.py  functional.py  utils.py
ricode/ml/_metrics/tasks/: entity_linking.py  fuzzy_ner.py  (+3 more)
ricode/ml/_preprocessing/: bio.py  data_files.py  huggingface_parquet.py  lazy.py  map_files.py  map_huggingface.py  map_utils.py  reduce_files.py  tokenization.py  utils.py
ricode/ml/_training/: utils.py  watcher.py
ricode/ml/datasets/: combined.py  concatenated.py  cumulative.py  dataset.py  distributed.py  index.py  loading.py  proxy.py
ricode/ml/distributed/: __init__.py  fully_sharded.py  sampler.py  utils.py
ricode/ml/model_setup/: JobConfig.py  activation_checkpointing.py  cli.py  compile.py  ddp.py  float8.py  fully_sharded_dp.py  job_config.py  setup.py  utils.py
ricode/ml/optimization/: activation_checkpointing.py  utils.py
ricode/nvidia/: nvml.py
ricode/typing_utils/: protocols.py
ricode/utils/: __init__.py  _times.py  decorators.py  func_cache.py  hashing.py  imports.py  json_files.py  mappings.py  path.py  pretty_printing.py  tempfiles.py  types.py
tests/: run_tests.py  test_basic_training.py  test_bio_conversion.py  test_dataset.py  test_dataset_downloads.py  test_datasets.py  test_flattened_dataset.py  test_imports.py  test_metrics.py
tests/tools/: __init__.py  foreach.py  tensors.py  unittest_result.py
(+2 files in other folders)
