[project]
name = "ricode"
description = "PyTorch based deep learning utilities for dataset handling and model training"
version = "0.0.1rc1"
dependencies = [
    "torchcheck==1.0.8",
    "tensorboard==2.20.0",
    "transformers==4.56.2",
    "safetensors_dataset==0.0.11",
    "torch==2.8.0",
    "torcheval==0.0.7",
    "matplotlib==3.10.6",
    "with_argparse==1.0.4",
    "more-itertools>=10.6.0",
    "attrs==25.4.0",
]
requires-python = ">= 3.10"
authors = [
    {name = "Moritz Hennen", email = "mail@fleonce.de"}
]
maintainers = [
    {name = "Moritz Hennen", email = "mail@fleonce.de"}
]

[project.urls]
homepage = "https://github.com/fleonce/ricode-ml"
repository = "https://github.com/fleonce/ricode-ml"

[project.scripts]
brrrrrrrr = "ricode:distributed.launch"

[tool.setuptools.packages.find]
where = ["."]
include = ["ricode*"]
