[project]
name = "ricode"
description = "PyTorch based deep learning utilities for dataset handling and model training"
version = "0.0.1rc1"
dependencies = [
    "torchcheck==1.0.8",
    "tensorboard==2.20.0",
    "transformers==4.56.2",
    "safetensors_dataset==0.0.11",
    "torch==2.12.0",
    "torcheval==0.0.7",
    "matplotlib==3.10.6",
    "with_argparse>=1.0.5rc3",
    "more-itertools>=10.6.0",
    "attrs==25.4.0",
    "nvidia-ml-py",
    "pyjson5==2.0.0",
    "multiprocess==0.70.17",
    "ijson==3.5.0",
]
requires-python = ">= 3.10"
authors = [
    {name = "Moritz Hennen", email = "mail@fleonce.de"}
]
maintainers = [
    {name = "Moritz Hennen", email = "mail@fleonce.de"}
]

[project.urls]
homepage = "https://github.com/fleonce/ricode-ml"
repository = "https://github.com/fleonce/ricode-ml"

[project.scripts]
brrrrrrrr = "ricode:distributed.launch"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ricode*"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pandas>=2.3.3",
]
